--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,22 +4,4 @@
 </form>
 <button (click)="login()">Submit</button>
 
-<h1>Problem</h1>
-
-<h5>problem4</h5>
-
-<h5>newBranch</h5>
-
-ssh-keygen -t rsa -b 4096 -C "mansih.vish0505@gmail.com"
-
-<h5>newBranch2</h5>
-
-<<<<<<< HEAD
-<h6>sub branch </h6>
-
-<h3>new branch 2.2</h3>
-
-<h1>b1</h1>
-
-
-b222 branch ===>
+<h5>new</h5>
