--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
-<form>
-  username<input type="text" name="username" [(ngModel)]="username" >
-  password<input type="text" name="password" [(ngModel)]="password">
-</form> 
-<button (click)="login()">Submit</button>
 
-
-<h1 *ngIf="success">{{message}}</h1>
+<app-header></app-header>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
