adding header footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
 
 <app-header></app-header>
+
+<h5>Front Page</h5>
+
+<div class="box red">
+<button routerLink="/login">LogIn</button>
 <router-outlet></router-outlet>
+
 <app-footer></app-footer>
+
